k8s/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: my-springboot-app
  labels:
    app: spring-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: java-springboot-app
  template:
    metadata:
      labels:
        app: java-springboot-app
    spec:
      containers:
        - name: my-spring-app-container
          image: 'abdelrahmanmakh/spring-app:1.1.2'
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "180Mi"
              cpu: "10m"
